# sentry-tauri

./: Cargo.toml  package.json
js/: index.ts  inject.ts
