[package]
description = "An experimental Tauri Plugin for Sentry"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "sentry-tauri"
readme = "README.md"
repository = "https://github.com/timfish/sentry-tauri"
version = "0.3.0"

[dependencies]
base64 = "0.22"
sentry = { version = "0.34.0", features = ["metrics", "tracing", "anyhow", "backtrace", "debug-images"] }
sentry-anyhow = { version = "0.34.0", features = ["backtrace"] }
sentry-rust-minidump = { git = "https://github.com/dmitov/sentry-rust-minidump/blob/master/Cargo.toml", branch = "master" }
serde = "1"
tauri = "1"
thiserror = "1"
